RESOLVED FIXED 120090
[Windows] Report better error messages when WinLauncher/DRT Fail to Run
https://bugs.webkit.org/show_bug.cgi?id=120090
Summary [Windows] Report better error messages when WinLauncher/DRT Fail to Run
Brent Fulgham
Reported 2013-08-20 14:23:39 PDT
WinLauncher, DumpRenderTree, and other command-line utilities consist of a simple loader program and a payload DLL that contains the actual program logic. In some cases, users cannot access the payload. A generic "Unable to load DLL" error message is presented to the user, and the program ends. To help remote debugging and to get better information from our test system, we should query the error status from Windows and include a human-readable version of the message for the user. This patch adds this additional diagnostic information to the launch code paths.
Attachments
Patch (3.65 KB, patch)
2013-08-20 15:12 PDT, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2013-08-20 15:12:02 PDT
Tim Horton
Comment 2 2013-08-20 15:14:46 PDT
Comment on attachment 209232 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=209232&action=review > Tools/win/DLLLauncher/DLLLauncherMain.cpp:177 > + return fatalError(L"Unknown Program", L"Failed to determine name of executabl: " + getLastErrorString(::GetLastError())); you lost a useful e here
Brent Fulgham
Comment 3 2013-08-20 15:24:04 PDT
Comment on attachment 209232 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=209232&action=review >> Tools/win/DLLLauncher/DLLLauncherMain.cpp:177 >> + return fatalError(L"Unknown Program", L"Failed to determine name of executabl: " + getLastErrorString(::GetLastError())); > > you lost a useful e here Whoops!
Brent Fulgham
Comment 4 2013-08-20 15:24:26 PDT
Note You need to log in before you can comment on or make changes to this bug.